[package]
name = "discordbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.10.9", features=["collector"]}
tokio = {version = "1.11.0", features = ["macros", "rt-multi-thread"]}
markov_strings = "0.1.4"
serde = "1.0.130"
serde_json = "1.0.68"
lazy_static = "1.4.0"
rand = "0.8.4"

